@@ -1,3 +1,4 @@
+* fixed convention in Exception.
 * begin(), end(), size() are now static.
 * fixed warning in assert in IterableEnum<> on some compilers.
 * build_process v0.6.0 introduced.
